tests/compile_fail/display/wrong_named_parameter.stderr
error[E0425]: cannot find value `bars` in this scope
 --> tests/compile_fail/display/wrong_named_parameter.rs:2:19
  |
2 | #[display("Stuff({bars})")]
  |                   ^^^^ help: a local variable with a similar name exists: `bar`
